<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="35sp"
                android:text="@string/animals_which_ones"/>


            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/camel" />

                <TextView
                    android:id="@+id/textViewAnimDesc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/camelus" />

                <Button
                    android:id="@+id/buttonChange1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/catfish" />

                <TextView
                    android:id="@+id/textViewAnimDesc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/silurus_glanis" />

                <Button
                    android:id="@+id/buttonChange2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/chameleon" />

                <TextView
                    android:id="@+id/textViewAnimDesc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/chamaeleonidae" />

                <Button
                    android:id="@+id/buttonChange3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />
            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/cheetah" />

                <TextView
                    android:id="@+id/textViewAnimDesc4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/acinonyx_jubatus" />

                <Button
                    android:id="@+id/buttonChange4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />
            </LinearLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/chicken" />

                <TextView
                    android:id="@+id/textViewAnimDesc5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/gallus_gallus_domesticus" />

                <Button
                    android:id="@+id/buttonChange5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />
            </LinearLayout>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/dachshund" />

                <TextView
                    android:id="@+id/textViewAnimDesc6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/dog" />

                <Button
                    android:id="@+id/buttonChange6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />
            </LinearLayout>

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/dalmatian" />

                <TextView
                    android:id="@+id/textViewAnimDesc7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/dog" />

                <Button
                    android:id="@+id/buttonChange7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />
            </LinearLayout>

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/deer" />

                <TextView
                    android:id="@+id/textViewAnimDesc8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/cervidae" />

                <Button
                    android:id="@+id/buttonChange8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />
            </LinearLayout>

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/dingo" />

                <TextView
                    android:id="@+id/textViewAnimDesc9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/canis_lupus_dingo" />

                <Button
                    android:id="@+id/buttonChange9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />
            </LinearLayout>

            <View
                android:id="@+id/divider10"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitle10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:text="@string/dodo" />

                <TextView
                    android:id="@+id/textViewAnimDesc10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:text="@string/raphus_cucullatus" />

                <Button
                    android:id="@+id/buttonChange10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/click_to_learn_more" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>